# simpleEditor

./: .gitattributes  .gitignore  conanfile.py  pip-requirements.txt  plugInfo.json  pyproject.toml
hooks/: pre-commit  prepare-commit-msg
simpleEditor/: __init__.py  printMessage.py
simpleEditor/edit/: AttributeWidget.py  KeyValueWidget.py  PropertyEditWidgets.py  SimpleEditWindow.py  __init__.py  add.py  edit.py
simpleEditor/edit/PropertyEdit/: AddXformOpDialog.py  AddXformOpDialog.ui  ArrayWidget.py  AssetWidget.py  BoolWidget.py  ColorIndicator.py  ColorPickerWidget.py  ConnectionWidget.py  ExpressionFloatLineEdit.py  ExpressionIntLineEdit.py  ExpressionUIntLineEdit.py  FloatWidget.py  IntWidget.py  QuartanionWidget.py  SignalBlocker.py  StringWidget.py  TokenValidator.py  TokenWidget.py  UIntWidget.py  UnsupportedAttributeWidget.py  XformOpWidget.py  __init__.py  util.py
simpleEditor/edit/resources/icons/: __init__.py
simpleEditor/graph/: Graph.py  GraphEditWindow.py  __init__.py
simpleEditor/turntable/: __init__.py  window.ui
usage/: conanfile.py
